@@ -46,7 +46,9 @@ REQUIREMENTS
 
 2. Build: Perl and standard GNU make
 
-3. Run: Bash for rbash, POSIX ``/bin/sh`` and GNU command line programs
+3. Run: Bash for ``/bin/rbash``, POSIX ``/bin/sh`` and GNU command
+   line programs, e2fsprogs package for ``/usr/bin/chattr`` and
+   optionally util-linux package for ``/usr/bin/getopt``
 
 USAGE
 =====
